modified:   R/Plotting.R 	modified:   doc/IIIandMe.R 	modified:   doc/IIIandMe.Rmd 	modified:   doc/IIIandMe.html 	modified:   man/PlotCo.Rd 	modified:   man/PreProcessing.Rd 	modified:   man/VoteCount.Rd 	modified:   vignettes/IIIandMe.Rmd 	new file:   vignettes/figures/chromoMap_plot.png

--- a/doc/IIIandMe.Rmd
+++ b/doc/IIIandMe.Rmd
@@ -27,7 +27,7 @@ Mounting evidence has shown the benefit of using haplotype variants over single 
 
 The development version of *IIIandMe* can be easily installed from Github:
 
-```{r install, eval=FALSE, include=FALSE}
+```{r install, eval=FALSE, echo=T}
 ### Install dependencies ahead
 install.packages('devtools')
 
@@ -107,10 +107,10 @@ co
 
 The visualization function *PlotCo()* is provided here to view haplotypes and crossovers of all gametes from one chromosome.
 
-```{r plot, echo=TRUE}
+```{r plot, echo=TRUE, results='hide'}
 PlotCo(sample, chr='chr9', co=vote[[2]])
 ```
-
+![chromo](figures/chromoMap_plot.png)
 
 # Session info {.unnumbered}
 
